--- a/CS315/w1d3Homework/inventory.css
+++ b/CS315/w1d3Homework/inventory.css
@@ -1,14 +1,33 @@
-button{
+table{
+    border-collapse: collapse;
+}
+.button1{
     background-color: greenyellow;
     padding: 15px 40px;
     border-radius: 10px;
-    margin-left: 40%;
+    margin-left: 20%;
     margin-bottom: 10px;
     font-size: 20px ;
 
 }
+
+tr:nth-child(even):hover{
+    background-color: blanchedalmond;
+}
+
+tr:nth-child(odd):hover {
+    background-color: #07bdbdc4;
+  }
+
+
+#quantity{
+    border: 1px solid rgb(0, 0, 0);
+}
+#quantity:focus{
+    border: 1px solid rgb(0, 0, 0);
+}
 input{
-    width: 100% ;
+    width: 50% ;
 }
 h1{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -18,8 +37,7 @@ th{
     width: 1%;
     background-color: rgb(64, 64, 223);
     color: azure;
-    border-left: 0.5px solid white;
-    padding: 2%;
+    border-left: 0.5px solid rgb(209, 250, 250);
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 tr:nth-child(even) {
@@ -33,8 +51,20 @@ tr>td{
     color: rgb(0, 0, 129);
     font-size: 20px;
     font-weight:bolder;
+    margin:auto;
 }
 
+.saveButton{
+    display: none;
+}
+.editTd{
+    background-color: rgb(209, 250, 250);
+    margin: auto;
+}
+.removeTd{
+    background-color: rgb(209, 250, 250);
+    margin-left: 23px;
+}
 body{
     margin: 5%;
     background-color: rgb(209, 250, 250);
